--- a/components/login.html
+++ b/components/login.html
@@ -2,13 +2,14 @@
   <head>
     <title style="font-family:courier;">Iniciar Sesión</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" href="../styles/styles.css"></link>
   </head>
 
-  <body style="background-color:#81DAF5;">
+  <body >
     <center>
-      <div>
+      <div class="div1">
         <form>
-          <table border="5">
+          <table>
             <tr>
               <td><label for="user">Name:</label></td>
               <td><input type="text" name="user"></td>
@@ -20,8 +21,8 @@
             </tr>
           </table>
           <br/>
-          <button type="submit" value="Enviar">Ok</button>
-          <button type="reset" value="Cancelar">Cancelar</button>
+          <button class="button" type="submit" value="Enviar">Ok</button>
+          <button class="button" type="reset" value="Cancelar">Cancelar</button>
         </form>
       </div>
     </center>
