--- a/components/registro.html
+++ b/components/registro.html
@@ -2,11 +2,12 @@
   <head>
     <title style="font-family:courier;">Registro</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" href="../proyect_02/styles/styles.css"></link>
   </head>
 
-  <body style="background-color:#81DAF5;">
+  <body >
     <center>
-      <div>
+      <div ">
         <form>
           <table border="5">
             <tr>
